--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -45,13 +45,13 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-danger">
-                        <div class="panel-body"><img src="images/mlsd.png" class="img-responsive" style="width:100%" alt="MLSD project"></div>
+                        <div class="panel-body"><img src="images/mlsd.png" class="img-responsive"  alt="MLSD project"></div>
                         <div class="panel-footer">Inspection Managment System for MLSD</div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="panel panel-success">
-                        <div class="panel-body"><img src="images/timetabling.png" class="img-responsive" style="width:100%" alt="timetabling project"></div>
+                        <div class="panel-body"><img src="images/timetabling.png" class="img-responsive"  alt="timetabling project"></div>
                         <div class="panel-footer">Courses Timetabling Project</div>
                     </div>
                 </div>
