--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>My portfolio</title>
     <meta charset="utf-8">
@@ -13,53 +12,54 @@
 </head>
 
 <body>
-    <div class="portfolio">
-        <div class="jumbotron">
-            <div class="text-md-left">
-                <img src="images/udacity-logo-png-transparent.png" class="rounded float-left" alt="udacity logo">
-            </div>
-            <div class="container text-center">
-                <h1>Reem AlBridi</h1>
-                <p>Backend Developer</p>
+    <header>
+        <div class="portfolio">
+            <div class="jumbotron">
+                <div class="text-md-left">
+                    <img src="images/udacity-logo-png-transparent.png" class="rounded float-left" alt="udacity logo">
+                </div>
+                <div class="container text-center">
+                    <h1>Reem AlBridi</h1>
+                    <p>Backend Developer</p>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
     <hr />
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="panel panel-primary">
-                    <div class="panel-body"><img src="images/coding.jpg" class="img-responsive" alt="codes image"></div>
-                </div>
-            </div>
-        </div>
-        <hr />
+    <main>
         <div class="container">
-            <div class="panel-heading">Featured Work</div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col">
                     <div class="panel panel-primary">
-                        <div class="panel-body"><img src="images/moh.png" class="img-responsive" alt="MOH project"></div>
-                        <div class="panel-footer">Inspection Managment System for MOH</div>
+                        <div class="panel-body"><img src="images/coding.jpg" class="img-responsive" alt="codes image"></div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="panel panel-danger">
-                        <div class="panel-body"><img src="images/mlsd.png" class="img-responsive"  alt="MLSD project"></div>
-                        <div class="panel-footer">Inspection Managment System for MLSD</div>
+            </div>
+            <hr />
+            <div class="container">
+                <div class="panel-heading">Featured Work</div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-body"><img src="images/moh.png" class="img-responsive" alt="MOH project"></div>
+                            <div class="panel-footer">Inspection Managment System for MOH</div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="panel panel-success">
-                        <div class="panel-body"><img src="images/timetabling.png" class="img-responsive"  alt="timetabling project"></div>
-                        <div class="panel-footer">Courses Timetabling Project</div>
+                    <div class="col-sm-4">
+                        <div class="panel panel-danger">
+                            <div class="panel-body"><img src="images/mlsd.png" class="img-responsive" alt="MLSD project"></div>
+                            <div class="panel-footer">Inspection Managment System for MLSD</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="panel panel-success">
+                            <div class="panel-body"><img src="images/timetabling.png" class="img-responsive" alt="timetabling project"></div>
+                            <div class="panel-footer">Courses Timetabling Project</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <br>
-
-    </div>
-</body>
+    </main>
 
 </html>
